# AutoTaskLLM---TDS_Project1

./: .env  Dockerfile  README.md  api.py  hello.py  pyproject.toml  requirements.txt
data/: comments.txt  contacts-sorted.json  contacts.json  dates.txt  email.txt  format.md  ticket-sales.db
data/docs/decade/: box.md  economy.md  effort.md  free.md  half.md  lot.md  on.md  policy.md  race.md  worker.md
data/docs/face/: different.md  drop.md  foreign.md  hospital.md  onto.md  prove.md  seek.md  take.md  town.md  true.md
data/docs/floor/: by.md  create.md  field.md  key.md  late.md  method.md  party.md  response.md  sometimes.md  stage.md
data/docs/hot/: clear.md  exactly.md  from.md  leader.md  money.md  old.md  sea.md  service.md  show.md  through.md
data/docs/large/: chair.md  daughter.md  degree.md  education.md  human.md  letter.md  mother.md  provide.md  should.md  than.md
data/docs/president/: effect.md  lawyer.md  maybe.md  number.md  onto.md  own.md  prevent.md  take.md  threat.md  write.md
data/docs/speak/: board.md  child.md  firm.md  majority.md  message.md  reflect.md  they.md  thing.md  where.md  within.md
data/docs/too/: American.md  accept.md  area.md  development.md  experience.md  growth.md  peace.md  program.md  season.md  threat.md
data/docs/usually/: bit.md  control.md  fire.md  great.md  half.md  only.md  property.md  push.md  trade.md  west.md
data/docs/wide/: approach.md  blue.md  certainly.md  coach.md  much.md  perform.md  receive.md  (+3 more)
src/: SYS_MSG.py  api.py  datagenFiles.py  functions.py  generated_task.py  llm.py  tasks.py
